--- a/log_in_sign_up/app/index.html
+++ b/log_in_sign_up/app/index.html
@@ -13,13 +13,13 @@
             <input type="text" name="email" placeholder="E-mail"/>
             <input type="text" name="password" placeholder="Password"/>
             <input type="text" name="password" placeholder="Confirm Password"/>
-            <a href="#" class="submitButton">SIGN UP</a>
+            <a href="#" class="submitButton" onclick="signup_animation()">SIGN UP</a>
         </div>
         <div class="login">
             <input type="text" name="email" placeholder="E-mail"/>
             <input type="text" name="password" placeholder="Password"/>
             <a href="#" class="reset">Forgot Password?</a>
-            <a href="#" class="submitButton">LOG IN</a>
+            <a href="#" class="submitButton" onclick="login_animation()">LOG IN</a>
         </div>
     </div>
   </body>
