--- a/log_in_sign_up/app/index.html
+++ b/log_in_sign_up/app/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <title>log_in_sign_up</title>
     <link href="css/style.css" rel="stylesheet" type="text/css"/>
-    <script src="js/jquery-3.1.1.min.js"></script>
+    <script src="https://cdn.staticfile.org/jquery/3.1.1/jquery.min.js"></script>
     <script src="js/script.js"></script>
   </head>
   <body>
